--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,14 +11,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container: neutrinog/concourse-tasks:latest
+    env:
+      HASH: $(echo ${{GITHUB_SHA}} | cut -c1-7)
+      TC_HELP_DESK_TOKEN: ${{ secrets.TC_HELP_DESK_TOKEN }}
+      TC_HELP_DESK_EMAIL: ${{ secrets.TC_HELP_DESK_EMAIL }}
 
 #    strategy:
 #      matrix:
 #        node-version: [12.x]
 
     steps:
-    - name: Checking Codebase
-      uses: actions/checkout@v1
+    - name: Checking out codebase
+      uses: actions/checkout@v2
 
 #    - name: Node ${{ matrix.node-version }}
 #      uses: actions/setup-node@v1
@@ -31,10 +35,35 @@ jobs:
       run: npm --version
 
     - name: npm install
-      run: npm ci
+      run: |
+        npm ci
+        npm run load-apps
 
     - name: npm test
       run: npm test
+
+    - name: Set environment vars
+      run: |
+        echo "TC_HELP_DESK_TOKEN=$TC_HELP_DESK_TOKEN" >> .env
+        echo "TC_HELP_DESK_EMAIL=$TC_HELP_DESK_EMAIL" >> .env
+        echo "BUILD=$HASH" >> .env
+
+    - name: Download latest language names
+      run: curl https://td.unfoldingword.org/exports/langnames.json > src/assets/langnames.json
+
+    - name: Update resources
+      run: npm run update-resources
+
+#    - name: bundle windows
+#      run: npm run bundle:windows --if-present
+#
+#    - name: bundle macos
+#        run: npm run bundle:macos --if-present
+
+    - name: build linux
+        run: |
+          gulp build --linux
+          gulp release-linux-deb --out=./release/linux-version-build.deb
 #    - uses: ./.github/actions/build
 #      with:
 #        run: |
