--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,9 +35,10 @@ jobs:
       run: npm --version
 
     - name: npm install
-      run: |
-        npm ci
-        npm run load-apps
+      run: npm ci
+
+    - name: load apps
+      run: run load-apps
 
     - name: npm test
       run: npm test
