--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -38,7 +38,7 @@ jobs:
       run: npm ci
 
     - name: load apps
-      run: run load-apps
+      run: npm run load-apps
 
     - name: npm test
       run: npm test
