--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,11 +25,8 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Checkout submodules (apps)
-      shell: bash
-      run: |
-        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-        git submodule sync --recursive
-        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+      uses: srt32/git-actions@v0.0.3
+      args: "git submodule update --init --recursive"
 
 #    - name: Node ${{ matrix.node-version }}
 #      uses: actions/setup-node@v1
