--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,11 +22,13 @@ jobs:
 
     steps:
     - name: Checking out codebase
-      uses: actions/checkout@v2
+      uses: actions/checkout@v1
+      with:
+        submodules: recursive
 
-    - name: Checkout submodules (apps)
-      uses: srt32/git-actions@v0.0.3
-      args: "git submodule update --init --recursive"
+#    - name: Checkout submodules (apps)
+#      uses: srt32/git-actions@v0.0.3
+#        args: "git submodule update --init --recursive"
 
 #    - name: Node ${{ matrix.node-version }}
 #      uses: actions/setup-node@v1
