--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     container: neutrinog/concourse-tasks:latest
     env:
-      HASH: $( echo GITHUB_SHA | cut -c1-7 )
+      HASH: $( echo $GITHUB_SHA | cut -c1-7 )
       TC_HELP_DESK_TOKEN: ${{ secrets.TC_HELP_DESK_TOKEN }}
       TC_HELP_DESK_EMAIL: ${{ secrets.TC_HELP_DESK_EMAIL }}
       APP_NAME: translationCore
@@ -25,13 +25,18 @@ jobs:
     - name: Test
       run: echo $HASH
 
+    - name: Read version
+      run: |
+        echo "::set-env name=HASH::$(echo $GITHUB_SHA | cut -c1-7)"
+        echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
+
+    - name: Test
+        run: echo $HASH
+
     - name: Checkout codebase
       uses: actions/checkout@v1
       with:
         submodules: recursive
-
-    - name: Read version
-      run: echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
 
 #    - name: Checkout submodules (apps)
 #      uses: srt32/git-actions@v0.0.3
