added other builds

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
     container: neutrinog/concourse-tasks:latest
     env:
@@ -74,3 +75,101 @@ jobs:
           echo "Building $APP_VERSION-$HASH"
           ./node_modules/.bin/gulp build --linux
           ./node_modules/.bin/gulp release-linux-deb --out=./release/$APP_NAME-linux-x64-$APP_VERSION-$HASH.deb
+
+  build-windows:
+    name: Build Windows
+    needs: test
+    runs-on: ubuntu-latest
+    container: neutrinog/concourse-tasks:latest
+    env:
+      TC_HELP_DESK_TOKEN: ${{ secrets.TC_HELP_DESK_TOKEN }}
+      TC_HELP_DESK_EMAIL: ${{ secrets.TC_HELP_DESK_EMAIL }}
+      APP_NAME: translationCore
+      CI: true
+
+    steps:
+      - name: Checkout codebase
+        uses: actions/checkout@v1
+        with:
+          submodules: recursive
+
+      - name: Read version and commit sha
+        run: |
+          echo "::set-env name=HASH::$(echo $GITHUB_SHA | cut -c1-7)"
+          echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
+
+      - name: Bundle environment variables
+        run: |
+          echo "TC_HELP_DESK_TOKEN=$TC_HELP_DESK_TOKEN" >> .env
+          echo "TC_HELP_DESK_EMAIL=$TC_HELP_DESK_EMAIL" >> .env
+          echo "BUILD=$HASH" >> .env
+
+      - name: npm install
+        run: npm ci
+
+      - name: Download latest language names
+        run: curl https://td.unfoldingword.org/exports/langnames.json > src/assets/langnames.json
+
+      - name: Update resources
+        run: npm run update-resources
+
+      #    - name: bundle windows
+      #      run: npm run bundle:windows --if-present
+      #
+      #    - name: bundle macos
+      #        run: npm run bundle:macos --if-present
+
+      - name: build windows
+        run: |
+          echo "Building $APP_VERSION-$HASH"
+          ./node_modules/.bin/gulp build --win
+
+      - name: bundle x64 windows
+        run: ./node_modules/.bin/gulp release-win64 --out=./release/$APP_NAME-win-x64-$APP_VERSION-$HASH.setup.exe
+
+      - name: bundle x32 windows
+        run: ./node_modules/.bin/gulp release-win32 --out=./build/$APP_NAME-win-x32-$APP_VERSION-$HASH.setup.exe
+
+  build-macos:
+    name: Build macOS
+    needs: test
+    runs-on: ubuntu-latest
+    container: neutrinog/concourse-tasks:latest
+    env:
+      TC_HELP_DESK_TOKEN: ${{ secrets.TC_HELP_DESK_TOKEN }}
+      TC_HELP_DESK_EMAIL: ${{ secrets.TC_HELP_DESK_EMAIL }}
+      APP_NAME: translationCore
+      CI: true
+
+    steps:
+      - name: Checkout codebase
+        uses: actions/checkout@v1
+        with:
+          submodules: recursive
+
+      - name: Read version and commit sha
+        run: |
+          echo "::set-env name=HASH::$(echo $GITHUB_SHA | cut -c1-7)"
+          echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
+
+      - name: Bundle environment variables
+        run: |
+          echo "TC_HELP_DESK_TOKEN=$TC_HELP_DESK_TOKEN" >> .env
+          echo "TC_HELP_DESK_EMAIL=$TC_HELP_DESK_EMAIL" >> .env
+          echo "BUILD=$HASH" >> .env
+
+      - name: npm install
+        run: npm ci
+
+      - name: Download latest language names
+        run: curl https://td.unfoldingword.org/exports/langnames.json > src/assets/langnames.json
+
+      - name: Update resources
+        run: npm run update-resources
+
+      - name: build macOS
+#   TODO: make this run on a mac image so we can get proper dmgs.
+        run: |
+          echo "Building $APP_VERSION-$HASH"
+          ./node_modules/.bin/gulp build --win
+          ./node_modules/.bin/gulp release-win64 --out=./release/$APP_NAME-macos-x64-$APP_VERSION-$HASH.dmg
