--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -82,6 +82,12 @@ jobs:
           ./node_modules/.bin/gulp build --linux
           ./node_modules/.bin/gulp release-linux-deb --out=./release/$APP_NAME-linux-x64-$APP_VERSION-$HASH.deb
 
+      - uses: actions/upload-artifact@v1
+        name: Upload artifacts
+        with:
+          name: $APP_NAME-linux-x64-$APP_VERSION-$HASH.deb
+          path: ./release/$APP_NAME-linux-x64-$APP_VERSION-$HASH.deb
+
   build-windows:
     name: Build Windows
     needs: test
@@ -178,3 +184,9 @@ jobs:
           echo "Building $APP_VERSION-$HASH"
           ./node_modules/.bin/gulp build --macos
           ./node_modules/.bin/gulp release-macos --out=./release/$APP_NAME-macos-x64-$APP_VERSION-$HASH.dmg
+
+      - uses: actions/upload-artifact@v1
+        name: Upload artifacts
+        with:
+          name: $APP_NAME-macos-x64-$APP_VERSION-$HASH.dmg
+          path: ./release/$APP_NAME-macos-x64-$APP_VERSION-$HASH.dmg
