--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -56,7 +56,7 @@ jobs:
           echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
 
       - name: Set artifact name
-        echo "::set-env name=ARTIFACT_NAME::$($APP_NAME-linux-x64-$APP_VERSION-$HASH.deb)"
+        run: echo "::set-env name=ARTIFACT_NAME::$($APP_NAME-linux-x64-$APP_VERSION-$HASH.deb)"
 
       - name: Bundle environment variables
         run: |
