--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -90,7 +90,7 @@ jobs:
         name: Upload artifacts
         with:
           name: build.deb #${{ env.ARTIFACT_NAME }}
-          path: ${{ steps.build.outputs.file }}
+          path: {{ steps.build.outputs.file }}
 
   build-windows:
     name: Build Windows
@@ -197,4 +197,4 @@ jobs:
         name: Upload artifacts
         with:
           name: build.dmg #${{ env.ARTIFACT_NAME }}
-          path: ${{ steps.build.outputs.file }}
+          path: {{ steps.build.outputs.file }}
