--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -56,7 +56,7 @@ jobs:
           echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
 
       - name: Set artifact name
-        run: echo "::set-env name=ARTIFACT_NAME::$($APP_NAME-linux-x64-$APP_VERSION-$HASH.deb)"
+        run: echo "::set-env name=ARTIFACT_NAME::$(echo "$APP_NAME-linux-x64-$APP_VERSION-$HASH.deb")"
 
       - name: Bundle environment variables
         run: |
@@ -89,7 +89,7 @@ jobs:
           UPLOAD_FILE: ${{ steps.build.outputs.file }}
         with:
           name: $UPLOAD_NAME
-          path: ${{ env.UPLOAD_FILE }}
+          path: $UPLOAD_FILE
 
   build-windows:
     name: Build Windows
