--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -58,9 +58,6 @@ jobs:
       - name: Set artifact name
         run: echo "::set-env name=ARTIFACT_NAME::$(echo "$APP_NAME-linux-x64-$APP_VERSION-$HASH.deb")"
 
-      - name: artifact
-        run: echo $ARTIFACT_NAME
-
       - name: Bundle environment variables
         run: |
           echo "TC_HELP_DESK_TOKEN=$TC_HELP_DESK_TOKEN" >> .env
@@ -170,7 +167,7 @@ jobs:
           echo "::set-env name=APP_VERSION::$(node -p -e "require('./package.json').version")"
 
       - name: Set artifact name
-        run: echo "::set-env name=ARTIFACT_NAME::$($APP_NAME-macos-x64-$APP_VERSION-$HASH.dmg)"
+        run: echo "::set-env name=ARTIFACT_NAME::$(echo "$APP_NAME-macos-x64-$APP_VERSION-$HASH.dmg")"
 
       - name: Bundle environment variables
         run: |
