changed path to artifacts

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -78,9 +78,8 @@ jobs:
         run: |
           echo "Building $APP_VERSION-$HASH"
           ./node_modules/.bin/gulp build --linux
-          mkdir release
-          ./node_modules/.bin/gulp release-linux-deb --out=./release/$ARTIFACT_NAME
-          echo "::set-output name=file::$(./release/$ARTIFACT_NAME)"
+          ./node_modules/.bin/gulp release-linux-deb --out=../artifacts/$ARTIFACT_NAME
+          echo "::set-output name=file::$(echo "../artifacts/$ARTIFACT_NAME")"
 
       - uses: actions/upload-artifact@v1
         name: Upload artifacts
@@ -189,9 +188,8 @@ jobs:
         run: |
           echo "Building $APP_VERSION-$HASH"
           ./node_modules/.bin/gulp build --macos
-          mkdir release
           ./node_modules/.bin/gulp release-macos --out=./release/$ARTIFACT_NAME
-          echo "::set-output name=file::$(./release/$ARTIFACT_NAME)"
+          echo "::set-output name=file::$(echo "./release/$ARTIFACT_NAME")"
 
       - uses: actions/upload-artifact@v1
         name: Upload artifacts
