--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
     env:
       TC_HELP_DESK_TOKEN: ${{ secrets.TC_HELP_DESK_TOKEN }}
       TC_HELP_DESK_EMAIL: ${{ secrets.TC_HELP_DESK_EMAIL }}
-      APP_NAME: translationCore
+      APP_NAME: tC
       CI: true
 
     steps:
@@ -79,26 +79,21 @@ jobs:
           echo "Building $APP_VERSION-$HASH"
           ./node_modules/.bin/gulp build --linux
           ./node_modules/.bin/gulp release-linux-deb --out=../artifacts/$ARTIFACT_NAME
-#          echo "::set-output name=file::$(echo "../artifacts/$ARTIFACT_NAME")"
 
       - uses: actions/upload-artifact@v1
         name: Upload artifacts
-#        env:
-#          UPLOAD_NAME: ${{ env.ARTIFACT_NAME }}
-#          UPLOAD_FILE: ${{ steps.build.outputs.file }}
         with:
           name: ${{ env.ARTIFACT_NAME }}
           path: ../artifacts/
 
   build-windows:
     name: Build Windows
-    needs: test
-    runs-on: ubuntu-latest
-    container: neutrinog/concourse-tasks:latest
+#    needs: test
+    runs-on: windows-latest
     env:
       TC_HELP_DESK_TOKEN: ${{ secrets.TC_HELP_DESK_TOKEN }}
       TC_HELP_DESK_EMAIL: ${{ secrets.TC_HELP_DESK_EMAIL }}
-      APP_NAME: translationCore
+      APP_NAME: tC
       CI: true
 
     steps:
@@ -127,26 +122,38 @@ jobs:
       - name: Update resources
         run: npm run update-resources
 
-      #    - name: bundle windows
-      #      run: npm run bundle:windows --if-present
-      #
-      #    - name: bundle macos
-      #        run: npm run bundle:macos --if-present
-
       - name: build windows
         run: |
           echo "Building $APP_VERSION-$HASH"
           ./node_modules/.bin/gulp build --win
+#     x64
+      - name: Set x64 artifact name
+        run: echo "::set-env name=ARTIFACT_NAME::$(echo "$APP_NAME-win-x64-$APP_VERSION-$HASH.setup.exe")"
 
       - name: bundle x64 windows
-        run: ./node_modules/.bin/gulp release-win64 --out=./release/$APP_NAME-win-x64-$APP_VERSION-$HASH.setup.exe
+        run: ./node_modules/.bin/gulp release-win64 --out=../artifacts/$ARTIFACT_NAME
+
+      - uses: actions/upload-artifact@v1
+        name: Upload x64 artifacts
+        with:
+          name: ${{ env.ARTIFACT_NAME }}
+          path: ../artifacts/
+#     x32
+      - name: Set x32 artifact name
+        run: echo "::set-env name=ARTIFACT_NAME::$(echo "$APP_NAME-win-x32-$APP_VERSION-$HASH.setup.exe")"
 
       - name: bundle x32 windows
-        run: ./node_modules/.bin/gulp release-win32 --out=./build/$APP_NAME-win-x32-$APP_VERSION-$HASH.setup.exe
+        run: ./node_modules/.bin/gulp release-win32 --out=../artifacts/$ARTIFACT_NAME
+
+      - uses: actions/upload-artifact@v1
+        name: Upload x32 artifacts
+        with:
+          name: ${{ env.ARTIFACT_NAME }}
+          path: ../artifacts/
 
   build-macos:
     name: Build macOS
-    needs: test
+#    needs: test
     runs-on: macos-latest
     env:
       TC_HELP_DESK_TOKEN: ${{ secrets.TC_HELP_DESK_TOKEN }}
@@ -189,13 +196,9 @@ jobs:
           echo "Building $APP_VERSION-$HASH"
           ./node_modules/.bin/gulp build --macos
           ./node_modules/.bin/gulp release-macos --out=../artifacts/$ARTIFACT_NAME
-#          echo "::set-output name=file::$(echo "../artifacts/$ARTIFACT_NAME")"
 
       - uses: actions/upload-artifact@v1
         name: Upload artifacts
-#        env:
-#          UPLOAD_NAME: ${{ env.ARTIFACT_NAME }}
-#          UPLOAD_FILE: ${{ steps.build.outputs.file }}
         with:
           name: ${{ env.ARTIFACT_NAME }}
           path: ../artifacts/
