--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,6 +133,12 @@ jobs:
       - name: bundle x64 windows
         run: ./node_modules/.bin/gulp release-win64 --out=../artifacts/$ARTIFACT_NAME
 
+      - name: list directories
+        run: |
+          dir .
+          dir ../
+          dir ../artifacts
+
       - uses: actions/upload-artifact@v1
         name: Upload x64 artifacts
         with:
