--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,7 +128,10 @@ jobs:
           ./node_modules/.bin/gulp build --win
 #     x64
       - name: Set x64 artifact name
-        run: echo "::set-env name=ARTIFACT_NAME::$(echo "$APP_NAME-win-x64-$APP_VERSION-$HASH.setup.exe")"
+        uses: allenevans/set-env@v1.0.0
+        with:
+          ARTIFACT_NAME: $APP_NAME-win-x64-$APP_VERSION-$HASH.setup.exe
+#        run: echo "::set-env name=ARTIFACT_NAME::$(echo "$APP_NAME-win-x64-$APP_VERSION-$HASH.setup.exe")"
 
       - name: bundle x64 windows
         run: ./node_modules/.bin/gulp release-win64 --out=../artifacts/$ARTIFACT_NAME
@@ -146,7 +149,11 @@ jobs:
           path: ../artifacts/
 #     x32
       - name: Set x32 artifact name
-        run: echo "::set-env name=ARTIFACT_NAME::$(echo "$APP_NAME-win-x32-$APP_VERSION-$HASH.setup.exe")"
+        uses: allenevans/set-env@v1.0.0
+        with:
+          overwrite: true
+          ARTIFACT_NAME: $APP_NAME-win-x32-$APP_VERSION-$HASH.setup.exe
+#        run: echo "::set-env name=ARTIFACT_NAME::$(echo "$APP_NAME-win-x32-$APP_VERSION-$HASH.setup.exe")"
 
       - name: bundle x32 windows
         run: ./node_modules/.bin/gulp release-win32 --out=../artifacts/$ARTIFACT_NAME
