--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -134,7 +134,9 @@ jobs:
 #        run: echo "::set-env name=ARTIFACT_NAME::$(echo "$APP_NAME-win-x64-$APP_VERSION-$HASH.setup.exe")"
 
       - name: bundle x64 windows
-        run: ./node_modules/.bin/gulp release-win64 --out=../artifacts/$ARTIFACT_NAME
+        run: |
+          echo "Generating executable ../artifacts/$ARTIFACT_NAME"
+          ./node_modules/.bin/gulp release-win64 --out=../artifacts/$ARTIFACT_NAME
 
       - name: list directories
         run: |
