--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,12 @@ jobs:
 
     steps:
     - name: Checkout codebase
-      uses: actions/checkout@v1
-      with:
-        submodules: recursive
+      uses: actions/checkout@v2
+      shell: bash
+      run: |
+        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+        git submodule sync --recursive
+        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
 
     - name: npm install
       run: npm ci
