--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,15 +16,16 @@ jobs:
       CI: true
 
     steps:
+    - name: Node version
+      run: |
+        node --version
+        npm --version
+
     - name: Checkout codebase
       uses: actions/checkout@v2
 
     - name: Checkout submodules
-      shell: bash
-      run: |
-        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-        git submodule sync --recursive
-        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+      run: git submodule update --init --recursive --depth=1
 
     - name: npm install
       run: npm ci
