--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,8 +120,7 @@ jobs:
         run: echo "::set-env name=ARTIFACT_NAME::$(echo "windows.setup.exe")"
 
       - name: Show artifact name
-        run:
-          - echo $ARTIFACT_NAME
+        run: echo $ARTIFACT_NAME
 
       - name: Bundle environment variables
         run: |
